# tools

./: CMakeLists.txt  README.md  pcma
adapt/: CMakeLists.txt  adapt_stringtok.cpp  adapt_stringtok.h  test_stringtok.cpp
bench/: CMakeLists.txt  bm_flatset.cpp  bm_longest.cpp  bm_masksearch.cpp  bm_palindrome.cpp  gen_string.cpp  gen_string.h  longest.cpp  longest.h
btl/buffer/: Makefile  build.cpp  build_methods.cpp  expand_traits.cpp
btl/data/: Makefile  buffer.cpp  build.cpp  build_methods.cpp  expand_traits.cpp
btl/include/: buffer  container  io
btl/include/bits/: btl_basetypes.h  btl_buffer.h  btl_build_base.h  btl_channel.h  btl_io.h  btl_iocore.h  btl_list.h  btl_manage.h  btl_scanner.h  btl_shim.h  btl_stdio.h  build_types.h  build_wrapper.h  channel_format.h  data_format.h  expand_traits.h  list_iterator.h  manage_connect.h  managed_io.h  socket_connect.h  socket_connector.h  socket_io.h  socket_traits.h
btl/io/: Makefile  channel_base.cpp  channel_scan.cpp  io_basic.cpp  io_core.cpp  io_init.cpp  io_manage.cpp  net_connector.cpp  socket.cpp  socket_base.cpp  socket_connect.cpp
ccore/: README.md
ccore/include/: cc_block.h
ctl/include/: culist  cupvec  list  polyco
ctl/include/bits/: cu_iterator.h  cu_list.h  cu_tank.h  cu_vec_control.h  cu_vector.h  iter_implement.h  list_base.h  tank_base.h  tank_control.h  tank_implement.h  tank_iter.h  vec_base.h  vec_control.h  vec_implement.h  vek_base.h  vek_control.h  vek_implement.h  vek_iter.h
ctl/polyco/: Makefile  tank_base.cpp  tank_iter.cpp  tank_range.cpp  vec_base.cpp  vek_base.cpp  vek_range.cpp
demo/: .gitignore  Makefile  check.cpp  ctltypes.h  demo_buffer.cpp  demo_ctank.cpp  demo_cvec.cpp  demo_cvek.cpp  demo_echo.cpp  demo_io.cpp  demo_list.cpp  demo_socket.cpp
funct/: CMakeLists.txt  funct_job.cpp  funct_job.h
graphics/: .gitignore
graphics/lib/aart/: aar.h  aart.dsp  aart.dsw  aart.h  aart_base.h  aart_core.h  aart_effect.cpp  aart_element.h  aart_gen.h  aart_link.h  aart_node.h  aart_output.h  aart_post.h  aart_scene.h  aartbase.cpp  aartcamera.cpp  aartcomponent.cpp  aartcore.cpp  aarteffect.cpp  aartelement.cpp  aartgen.cpp  aartgeometry.cpp  aartlight.cpp  aartlink.cpp  aartnode.cpp  aartoutput.cpp  aartpost.cpp  aartscene.cpp  aartsetup.cpp  aartsurface.cpp  aarttexture.cpp  angle.c  angle.h  make.linux  test.dsp  testaart.cpp  uprint.h
graphics/lib/art/: byte_swap.c  epart_mchar.c  epart_motion.c  epart_post.c  epart_print.c  epart_rule.c  epart_save.c  epart_surface.c  epart_util.c  epart_word.c  epbf_conv.c  epbf_fract.c  (+8 more)
graphics/render/: cp_data.c  cp_file.c  cp_image.c  cp_main.c  cp_map.c  cp_supp.c  dx_clip.c  dx_depth.c  dx_effect.cpp  dx_filter.c  dx_mempage.c  dx_post.c  dx_tile.c  e_math.c  effect_op.cpp  efilter.h  em_math.c  i_targa.c  i_targa.h  i_vid.c  l_stub.c  make.linux  mem_name.c  r_color.c  r_crit.c  r_data.c  r_light.c  r_map.c  r_math.c  r_rand.c  r_soft.c  r_support.c  rb_actor.c  rb_all.c  rl_liquid.c  rl_poster.c  rlight.h  ro_envir.c  ro_hit.c  rqdata.h  (+19 more)
graphics/rengine/: effect_op.h  effect_toon.h  make.linux  y_camera.cpp  y_camera.h  y_core.cpp  y_core.h  y_effect.cpp  y_file.cpp  y_geom.cpp  y_global.c  y_image.cpp  y_light.cpp  y_math.cpp  y_mem.cpp  y_setup.cpp  y_supp.c  y_surf.cpp  y_surf.h  y_surface.cpp  ye.h  ymath.h  yzor.cpp
lib/buffer/: Makefile  buffer.cpp  build.cpp  build_methods.cpp  expand_traits.cpp
lib/include/: buffer  buffer.h  buffer_scanner.h  io
misc/: Makefile
misc/include/: .safety_once.h.swp  safety_once.h
misc/src/: Makefile  safety_once.cpp
serialz/: CMakeLists.txt  assemble_trait.h  ser_buildsz.h  ser_buildtools.h  ser_limit.cpp  ser_limit.h  serialize.h  serz_buildbuf.h  serz_buildstr.cpp  serz_buildstr.h  serz_buildsz.h  serz_buildtools.h  serz_limit.cpp  serz_limit.h  serz_variable.h
test/: CMakeLists.txt  t_adapt_stringtok.cpp  t_funct_job.cpp  t_serz_buf.cpp  t_serz_core.cpp  t_serz_limit.cpp  t_serz_str.cpp  t_serz_sz.cpp  t_serz_var.cpp  t_static.cpp  t_static.h  t_static2.cpp
(+55 files in other folders)
